[package]
name = "compiler-base"
version = "0.0.0"
edition = "2021"
description = "Base utilities for the compiler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.celerm]
package = "compiler-macros"
path = "../compiler-macros"

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.74"
thiserror = "1.0.51"

# wasm dependencies
tsify = { version = "0.4.5", default-features = false, features = ["js"], optional = true }
wasm-bindgen = { version = "0.2.89", optional = true }
wasm-bindgen-futures = { version = "0.4.39", optional = true }
web-sys = { version = "0.3.66", features = ["WorkerGlobalScope"], optional = true }
js-sys = { version = "0.3.66", optional = true }
serde-wasm-bindgen = { version = "0.6.3", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
uni-path = "1.51.1"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
base64 = "0.21.5"

# native dependencies

[features]
default = ["native"]
native = []
wasm = [
    "dep:wasm-bindgen", 
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
    "dep:tsify",
]

[lib]
name = "celerb"
path = "src/lib.rs"
