[package]
name = "compiler-core"
version = "0.0.0"
description = "Core compile phases for the compiler"
edition = "2021"

[dependencies.celerb]
package = "compiler-base"
path = "../compiler-base"

[dependencies]
derivative = "2.2.0"
futures = "0.3.28"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.25"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = [
    "macros",
], optional = true}
instant = "0.1.12"
log = "0.4.20"
roman = "0.1.6"

[dev-dependencies]
map-macro = "0.2.6"

[features]
default = ["native"]
native = [
    "celerb/native",
    "dep:tokio", 
    "tokio/rt-multi-thread",
]
wasm = [
    "celerb/wasm",
    "instant/wasm-bindgen",
]

[lib]
name = "celerc"
path = "src/lib.rs"
