[package]
name = "compiler-macros"
version = "0.0.0"
description = "(Proc) Macros for the compiler core"
edition = "2021"

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro2 = "1.0.76"
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }

# used for testing
# [features]
# wasm = []

[lib]
proc-macro = true
name = "celerm"
path = "src/lib.rs"
