[package]
name = "compiler-types"
version = "0.0.0"
description = "Interface types between compiler and clients"
edition = "2021"
default-run = "buildtypes"

[dependencies]
serde = { version = "1.0.174", features = ["derive"] }
ts-rs = "7.0.0"

[[bin]]
name = "buildtypes"
path = "src/build.rs"

[lib]
name = "celerctypes"
path = "src/lib.rs"

