[package]
name = "compiler-types"
version = "0.0.0"
description = "Interface types between compiler and clients"
edition = "2021"

[dependencies]
compiler-macros = { path = "../compiler-macros" }
serde = { version = "1.0.174", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }
wasm-bindgen = "0.2.87"

[features]
wasm = []

[lib]
name = "celerctypes"
path = "src/lib.rs"

