[package]
name = "compiler-wasm"
version = "0.0.0"
description = "WASM interface of the compiler"
edition = "2021"

[dependencies.celerc]
package = "compiler-core"
path = "../compiler-core"
features = ["wasm"]
default-features = false

[dependencies]
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
serde-wasm-bindgen = "0.5.0"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
js-sys = "0.3.64"
log = { version = "0.4.20", features = ["std"] } 
base64 = "0.21.4"
tsify = { version = "0.4.5", default-features = false, features = ["js"] }

[lib]
name = "celercwasm"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]
