[package]
name = "celer-docker-build"
version = "0.0.0"
edition = "2021"
description = "Tool for preparing artifacts locally for building the container"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12.4" }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
zip-extract = "0.1.3"
