[package]
name = "web-server"
version = "0.0.0"
edition = "2021"
default-run = "celerserver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler-core = { path = "../compiler-core" }
async-recursion = "1.0.5"
async-trait = "0.1.68"
axum = "0.6.20"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
env_logger = "0.10.0"
envconfig = "0.10.0"
futures = "0.3.28"
http-body = "0.4.5"
tokio = { version = "1.32.0", features=["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["ansi"] }
flate2 = "1.0.27"
once_cell = "1.18.0"

[[bin]]
name = "celerserver"
path = "src/main.rs"
