[package]
name = "web-server"
version = "0.0.0"
edition = "2021"
default-run = "celerserver"

[dependencies.celerc]
package = "compiler-core"
path = "../compiler-core"
features = ["native"]
default-features = false

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
envconfig = "0.10.0"
futures = "0.3.28"
http-body = "0.4.5"
tokio = { version = "1.36.0", features=["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs", "trace", "compression-gzip"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["ansi"] }
flate2 = "1.0.28"
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["rustls-tls", "gzip", "deflate"], default-features=false }
cached = { version = "0.46.1", features = ["async"] }
instant = "0.1.12"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[[bin]]
name = "celerserver"
path = "src/main.rs"
